--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,7 @@
   --mt-hero-line-height-title: 1;
   --mt-hero-line-height-subtitle: 1.5;
   --mt-nav-height: 85px;
+  --mt-nav-height-narrow: 60px;
   --mt-prev-next-header-link-line-height: var(--mt-font-size-185);
   --mt-prev-next-button-line-height: var(--mt-font-size-120);
 
